--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,33 @@
+Changes in 2.5.6:
+-----------------
+* Don't break with libxslt 1.1.3                           (Shaun McCance)
+* Better author/editor/othercredit support (#134769)       (Shaun McCance)
+* Portability fix in build (#134534)                        (Merino Vidal)
+* Don't crash when the window is closed before the
+  transformation is finished (#134266)                 (Jan Arne Petersen)
+* Don't crash on compulsive page switching                 (Shaun McCance)
+* Some more stylesheet work                                (Shaun McCance)
+* Translation updates:
+  ar      (Arafat Medini)
+  az      (Mətin Əmirov)
+  be      (Ales Nyakhaychyk)
+  ca      (Jordi Mallach)
+  cs      (Miloslav Trmac)
+  cy      (Rhys Jones)
+  da      (Ole Laursen)
+  de      (Christian Neumair)
+  el      (Kostas Papadimas)
+  ko      (Changwoo Ryu)
+  ja      (Takeshi AIHANA)
+  mn      (Sanlig Badral)
+  nn      (Åsmund Skjæveland)
+  no      (Kjartan Maraas)
+  pt      (Duarte Loreto)
+  sq      (Laurent Dhima)
+  sr      (Danilo Šegan)
+  sr@Latn (Danilo Šegan)
+  th      (Paisa Seeluangsawat)
+
 Changes in 2.5.5:
 -----------------
 * Fixed orphaned Contents header                       (Shaun McCance)
