--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-24  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	- Version 2.5.6
+
+	* po/*.po:
+	- Various distcheck stuff
+
 2004-02-19  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
