--- a/po/el.po
+++ b/po/el.po
@@ -15,14 +15,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: el\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-23 13:33+0200\n"
+"POT-Creation-Date: 2004-02-24 18:22-0600\n"
 "PO-Revision-Date: 2004-02-23 13:34+0200\n"
 "Last-Translator: Kostas Papadimas <pkst@gnome.org>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 "X-Generator: KBabel 1.0.2\n"
 
 #: data/toc.xml.in.h:1
@@ -734,4 +734,3 @@ msgstr "Βοήθεια"
 
 #~ msgid "Loading..&nbsp;"
 #~ msgstr "Φορτώνεται..&nbsp;"
-
