--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-27  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated.
+
 2004-02-25  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
