--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-28  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Jean-Michel Ardantz <jmardantz@ifrance.com>.
+
 2004-02-27  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated.
