--- a/po/fr.po
+++ b/po/fr.po
@@ -2,7 +2,7 @@
 # Copyright (C) 2002-2004 Free Software Foundation, Inc.
 # This file is under the same license as the yelp package.
 #
-# maintainer: Jean-Michel Ardantz <jmardantz@ifrance.com>, 2002-2003.
+# maintainer: Jean-Michel Ardantz <jmardantz@ifrance.com>, 2002-2004.
 # Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2002-2004.
 # Christophe Fergeau <teuf@users.sourceforge.net>, 2002.
 # Sun G11n <gnome_int_l10n@ireland.sun.com>, 2002.
@@ -10,15 +10,15 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.5.3\n"
-"POT-Creation-Date: 2004-02-24 18:22-0600\n"
-"PO-Revision-Date: 2004-01-17 11:58+0100\n"
-"Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
+"Project-Id-Version: yelp 2.5.6\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-02-28 11:27+0100\n"
+"PO-Revision-Date: 2004-02-28 11:24+0100\n"
+"Last-Translator: Jean-Michel Ardantz <jmardantz@ifrance.com>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -142,7 +142,7 @@ msgstr "Fabrique Yelp"
 
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr "Pas d'attribut href trouvé dans yelp:document"
+msgstr "Aucun attribut href trouvé dans yelp:document"
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
@@ -172,7 +172,7 @@ msgstr "La page sélectionnée ne peut être trouvée dans ce document."
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
-msgstr "Le sommaire ne peut être lu."
+msgstr "Le sommaire ne peut pas être lu."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
@@ -420,9 +420,8 @@ msgid "&#8221;"
 msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
-#, fuzzy
 msgid "About This Article"
-msgstr "À propos de cette partie"
+msgstr "À propos de cet article"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
@@ -489,9 +488,8 @@ msgid "Author"
 msgstr "Auteur"
 
 #: stylesheets/l10n.xml.in.h:22
-#, fuzzy
 msgid "Authors"
-msgstr "Auteur"
+msgstr "Auteurs"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
@@ -514,9 +512,8 @@ msgid "Collaborator"
 msgstr "Collaborateur"
 
 #: stylesheets/l10n.xml.in.h:28
-#, fuzzy
 msgid "Collaborators"
-msgstr "Collaborateur"
+msgstr "Collaborateurs"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
@@ -527,7 +524,6 @@ msgid "Copyright"
 msgstr "Copyright"
 
 #: stylesheets/l10n.xml.in.h:32
-#, fuzzy
 msgid "Copyrights"
 msgstr "Copyright"
 
@@ -600,7 +596,6 @@ msgid "Other Contributor"
 msgstr "Autres contributeurs"
 
 #: stylesheets/l10n.xml.in.h:51
-#, fuzzy
 msgid "Other Contributors"
 msgstr "Autres contributeurs"
 
@@ -617,9 +612,8 @@ msgid "Publisher"
 msgstr "Éditeur"
 
 #: stylesheets/l10n.xml.in.h:55
-#, fuzzy
 msgid "Publishers"
-msgstr "Éditeur"
+msgstr "Éditeurs"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
@@ -635,7 +629,7 @@ msgstr "Section de référence"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Information sur la version"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
@@ -680,61 +674,3 @@ msgstr "Affiche l'aide sur GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Aide"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Le document « %s » n'existe pas"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Rechercher le texte dans le document :</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "_Césurer automatiquement"
-
-#~ msgid "Find text..."
-#~ msgstr "Rechercher le texte..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Correspond au mot _entier"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "_Correspondance majuscule/minuscule"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Rechercher :"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Bureau"
-
-#~ msgid "Additional documents"
-#~ msgstr "Documents supplémentaires"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Pages de manuel"
-
-#~ msgid "Info Pages"
-#~ msgstr "Pages d'infos"
-
-#~ msgid "Manual pages"
-#~ msgstr "Pages de manuel"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME est"
-
-#~ msgid "Free Software"
-#~ msgstr "Logiciel Libre"
-
-#~ msgid "(C)"
-#~ msgstr "©"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Chargement..."
-
-#~ msgid "Previous"
-#~ msgstr "Précédent"
-
-#~ msgid "Next"
-#~ msgstr "Suivant"
-
-#~ msgid "Search in the index"
-#~ msgstr "Recherche dans l'index"
