--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2,14 +2,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-02-24 18:22-0600\n"
-"PO-Revision-Date: 2004-01-15 11:14+0800\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-02-29 16:07+0100\n"
+"PO-Revision-Date: 2004-03-01 00:43+0800\n"
 "Last-Translator: 周延潮 <75jan@163.com>\n"
 "Language-Team: zh_CN <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -483,7 +483,7 @@ msgstr "参考书目"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr "名簿"
+msgstr "书"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
@@ -531,7 +531,7 @@ msgstr "电子邮件"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr "示例"
+msgstr "例"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
@@ -571,7 +571,7 @@ msgstr "信息来源"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr "注解"
+msgstr "注"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
