--- a/po/it.po
+++ b/po/it.po
@@ -5,110 +5,98 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-02-24 18:22-0600\n"
-"PO-Revision-Date: 2003-01-21 15:03+0100\n"
+"POT-Creation-Date: 2004-02-18 09:16+0100\n"
+"PO-Revision-Date: 2004-02-26 15:31+0100\n"
 "Last-Translator: Psyk[o] <shaihulud@supereva.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Applicazioni"
+msgstr "Applet"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Applicazioni"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Desktop"
+msgstr "Desktop"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Sviluppo"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Sviluppo"
+msgstr "Ambienti di sviluppo"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Sviluppo"
+msgstr "Strumenti di sviluppo"
 
+# Problema!!! Cfr successiva voce "Editor"
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/_Modifica"
+msgstr "Editori"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Applicazioni"
+msgstr "Applicazioni educative"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Giochi e divertimento"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Generico"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
-msgstr "Indice della guida"
+msgstr "Sommario del manuale"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Applicazioni"
+msgstr "Applicazioni per Internet"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Routine del kernel"
+msgstr "Kernel"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Applicazioni"
+msgstr "Applicazioni multimediali"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Applicazioni per l'ufficio e la produttività"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Applicazioni"
+msgstr "Applicazioni scientifiche"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Sicurezza"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Chiamate di sistema"
+msgstr "Sistema"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Utilità"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Applicazioni"
+msgstr "Applicazioni per X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -116,15 +104,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "M_aiuscolo/minuscolo"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Trova"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Trova:"
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -136,7 +124,7 @@ msgstr "Preced_ente"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "Alla fine _ricomincia"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -148,55 +136,53 @@ msgstr "Fabbrica di Yelp"
 
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Non è stato trovato alcun attributo href su yelp:document"
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Memoria esaurita"
 
-#: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:634 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Frontespizio"
 
-#: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
+# Abbreviazione per "Table of Contents". È possibile usare la stessa parola/frase per entrambi.
+#: src/yelp-db-pager.c:636 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
-#, fuzzy
 msgid "Contents"
-msgstr "Indice della guida"
+msgstr "Sommario"
 
-#: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
+# Usato per collegamenti ad elementi di tipo sconosciuto
+#: src/yelp-db-pager.c:654 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Sconosciuto"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Il documento \"%s\" non esiste"
+msgstr "Non è possibile aprire il documento selezionato"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Il documento \"%s\" non esiste"
+msgstr "Non è possibile trovare la pagina selezionata in questo documento."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "Il documento \"%s\" non esiste"
+msgstr "Non è possibile leggere il sommario."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Documenti DocBook SGML non saranno supportati ancora per molto."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Il documento \"%s\" non esiste"
+msgstr "Non è possibile leggere il file selezionato."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr ""
+msgstr "Definisce quale directory cache usare"
 
+# il %s è definito nei sorgenti come bonobo_exception_get_text (&ev)
 #: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
@@ -268,22 +254,21 @@ msgid "System Administration"
 msgstr "Amministrazione del sistema"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Documenti"
+msgstr "URI del documento"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "L'URI del documento da processare"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: conteggio delle pause è negativo."
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Impossibile attivare Yelp: \"%s\""
+msgstr "Impossibile caricare il file OMF «%s»."
 
 #: src/yelp-toc-pager.c:892
 msgid "Categories"
@@ -310,19 +295,16 @@ msgid "/_Edit"
 msgstr "/_Modifica"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
 msgstr "/Modifica/Tr_ova.."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
 msgstr "/Modifica/Tro_va successivo"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Modifica/Tro_va successivo"
+msgstr "/Modifica/Trova pr_ecedente"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
@@ -341,24 +323,20 @@ msgid "/Go/_Home"
 msgstr "/Vai/_Home"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/V_ai"
+msgstr "/Vai/"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "Preced_ente"
+msgstr "/Vai/Pagina preced_ente"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Vai/In_dice"
+msgstr "/Vai/Pagina s_uccessiva"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Indice della guida"
+msgstr "/Vai/_Sommario"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
@@ -366,12 +344,14 @@ msgstr "/A_iuto"
 
 #: src/yelp-window.c:290
 msgid "/Help/_About"
-msgstr "/Aiuto/Informazioni _su..."
+msgstr "/Aiuto/I_nformazioni"
 
+# Questo browser mi lascia molto molto molto perplesso
 #: src/yelp-window.c:352
 msgid "Help Browser"
-msgstr "Guida in linea"
+msgstr "Visualizzatore documentazione"
 
+# Usato per gli elementi <sect*>
 #: src/yelp-window.c:570 stylesheets/l10n.xml.in.h:61
 msgid "Section"
 msgstr "Sezione"
@@ -408,357 +388,363 @@ msgstr "Caricamento in corso..."
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1300
 msgid "translator_credits"
-msgstr "Alessandro Costantino <shaihulud@supereva.it>"
+msgstr ""
+"Alessandro Costantino <shaihulud@supereva.it>\n"
+"Luca Ferretti         <elle.uca@infinito.it>"
 
 #: src/yelp-window.c:1305
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "Guida in linea di GNOME 2.0"
+msgstr "Un visualizzatore di documentazione per GNOME"
 
+# The opening quotation mark for inner quotes.
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "“"
 
+# The closing quotation mark for inner quotes.
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "”"
 
+# The opening quotation mark for outer quotes.
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "«"
 
+# The closing quotation mark for outer quotes.
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "»"
 
+# Collegamento al frontespizio di un <article>
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "Informazioni su questo articolo"
 
+# Collegamento al frontespizio di un <bibliography>
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Informazioni su questa bibliografia"
 
+# Collegamento al frontespizio di un <book>
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "Informazioni su questo libro"
 
+# Collegamento al frontespizio di un <chapter>
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "Informazioni su questo capitolo"
 
+# Collegamento al frontespizio di un <refentry>
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "Informazioni su questa voce"
 
+# Collegamento al frontespizio di un <glossary>
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "Informazioni su questo glossario"
 
+# Collegamento al frontespizio di un <index> e <setindex>
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "Informazioni su questo indice"
 
+# Collegamento al frontespizio di un <part>
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "Informazioni su questa parte"
 
+# Collegamento al frontespizio di un <preface>
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "Informazioni su questa prefazione"
 
+# Collegamento al frontespizio di un <reference>
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "Informazioni su questo riferimento"
 
+# Collegamento al frontespizio di un <sect*> e <refsect*>
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "Informazioni su questa sezione"
 
+# Collegamento al frontespizio di un <set>
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "Informazioni su questa raccolta"
 
+# Dall'elemento <affiliation>, usato nell'elencare autori/contributori, come
+#    Luca Ferretti
+#      Affiliation: Italian GNOME Team
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Applicazioni"
+msgstr "Associazione"
 
+# Usato per l'elemento <appendix>
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Appendice"
 
+# Usato per l'elemento <article>
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Articolo"
 
+# Abbreviazione per "Message Audience". È possibile usare la stessa parola/frase per entrambi
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Pubblico"
 
+# Usato come intestazione prima di un elenco di autori
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Autore"
 
+# Usato come intestazione prima di un elenco di autori
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Autori"
 
+# Usato per l'elemento <bibliography>
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Bibliografia"
 
+# Usato per l'elemento <book>
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Libro"
 
+# Usato per l'elemento <caution>
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Attenzione"
 
+# Usato per l'elemento <chapter>
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Capitolo"
 
+# Usato come una intestazione prima di un elenco di collaboratori
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Collaboratore"
 
+# Usato come una intestazione prima di un elenco di collaboratori
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Collaboratori"
 
+# Usato per l'elemento <colophon>
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Colophon"
 
+# Usato come una intestazione prima di un elenco di copyrights
+# Es.
+#      (C) Luca Ferretti 2003
+#      (C) Cristopher Gabriel 1999-2000
+#
+# Tradurlo come diritto d'autore è errato, vero?
+#
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Copyright"
 
+# Usato come una intestazione prima di un elenco di copyright
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Copyright"
 
+# Usato come intestazione per la cononna della detta nelle cronologia delle revisioni
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Data"
 
+# Usato per l'elemento <dedication>
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Sezione"
+msgstr "Dedica"
 
+# Usato come una intestazione prima di un elenco di editor
+#
+# Notare che il prededente messaggio "Editors" è sia il plurale di questa voce, sia il plurale di editor di testo!!!!
+#
+# Qualcuno conosce un modo nei file po per spezzare?
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/_Modifica"
+msgstr "Editore"
 
+# Usato nell'elencare autori/contributori, come in
+#
+#       Luca Ferretti
+#         Email: elle.uca@infinito.it
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
+# Usato per l'elemento <example>
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Esempio"
 
+# Usato per l'elemento <figure>
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Figura"
 
+# Usato per l'elemento <glossary>
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Glossario"
 
+# Usato per l'elemento <important>
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Importante"
 
+# Usato per l'elemento <index>
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
 msgstr "Indice"
 
+# Usato per l'elemento <legalnotice>
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Note legali"
 
+# Abbreviazione per "Message Level". È possibile usare la stessa parola/frase per entrambi
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Livello"
 
+# Usato per l'elemento <msgaud>
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "Pubblico"
 
+# Usato per l'elemento <msglevel>
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "Livello"
 
+# Usato per l'elemento <msgorig>
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "Origine"
 
+# Usato per l'elemento <note>
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Annotazione"
 
+# Abbreviazione per "Message Origin". È possibile usare la stessa parola/frase
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Origine"
 
+# Usato come intestazione prima di un elenco di contributori
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Altro contributore"
 
+# v.s.
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Altri contributori"
 
+# Usato per l'elemento <part>
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Parte"
 
+# Usato per l'elemento <preface>
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Prefazione"
 
+# Usato come intestazione prima di un elenco di publisher
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Pubblicato"
 
+# v.s.
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Pubblicato"
 
+# Usato per l'elemento <reference>
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Riferimento"
 
+# Usato per l'elemento <refentry>
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Riferimento voce"
 
+# Usato per l'elemento <refsect*>
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Riferimento sezione"
 
+# Usato per l'elemento <releaseinfo>
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Informazioni sul rilascio"
 
+# Usato per l'elemento <revhistory>
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "Cronologia delle revisioni"
 
+# Usato per l'elemento <see>
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "Cfr."
 
+# Usato per l'elemento <seealso>
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "Cfr. anche"
 
+# Usato per l'elemento <setindex>
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "Indice"
+msgstr "Indice raccolta"
 
+# Usato per l'elemento <table>
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "Tabella"
 
+# Usato per un collegamento alla tavola del sommario
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Indice della guida"
+msgstr "Tavola del sommario"
 
+# Usato per l'elemento <tip>
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "Suggerimento"
 
+# Usatco come intestazione della colonna del titolo nella cronologia delle revisioni
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "Titolo"
 
+# Usato per l'elemento <warning>
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "Avviso"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Ricevi aiuto con GNOME"
+msgstr "Consulta la documentazione con GNOME"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Aiuto"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Il documento \"%s\" non esiste"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Trova testo nel documento:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Trova dall'_inizio del documento"
-
-#~ msgid "Find text..."
-#~ msgstr "Trova testo..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Par_ola intera"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "Distingui _maiuscole e minuscole"
-
-#~ msgid "_Search for:"
-#~ msgstr "Ce_rca:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Desktop"
-
-#~ msgid "Additional documents"
-#~ msgstr "Documenti supplementari"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Pagine del manuale"
-
-#~ msgid "Info Pages"
-#~ msgstr "Pagine info"
-
-#~ msgid "Manual pages"
-#~ msgstr "Pagine del manuale"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME e'"
-
-#~ msgid "Free Software"
-#~ msgstr "Software libero"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Caricamento in corso..."
-
-#~ msgid "Search in the index"
-#~ msgstr "Cerca nell'indice"
-
-#~ msgid ""
-#~ "Error while parsing the stylesheet, make sure you have your docbook "
-#~ "environment setup correctly."
-#~ msgstr ""
-#~ "Si è verificato un errore nell'analisi del foglio di stile, assicurarsi "
-#~ "che l'ambiente del docbook sia impostato correttamente."
-
-#~ msgid "Couldn't parse the document '%s'."
-#~ msgstr "Impossibile analizzare il documento \"%s\"."
-
-#~ msgid "Error while applying the stylesheet."
-#~ msgstr "Si è verificato un errore nell'applicare il foglio di stile."
-
-#~ msgid "info"
-#~ msgstr "info"
-
-#~ msgid "man"
-#~ msgstr "man"
