--- a/po/lt.po
+++ b/po/lt.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
-"POT-Creation-Date: 2004-02-24 18:22-0600\n"
-"PO-Revision-Date: 2004-01-31 00:52+0200\n"
-"Last-Translator: Žygimantas Beručka <uid0@tuxfamily.org>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-02 10:02+0200\n"
+"PO-Revision-Date: 2004-03-02 10:03+0200\n"
+"Last-Translator: Žygimantas Beručka <uid0@akl.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
+"Content-Transfer-Encoding: 8bit"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -618,7 +618,7 @@ msgstr "Nuorodos skyrius"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Leidimo informacija"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
@@ -663,3 +663,4 @@ msgstr "Gauti pagalbą dirbant su GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Pagalba"
+
