--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-03-03  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	- Require libxml2-2.6.5 and libxslt-1.1.4 for the dictionary stuff.
+
+	* src/yelp-toc-pager.c:
+	- Remove work-around for #131745, since we now require libxml2-2.6.5.
+
 2004-02-24  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
