--- a/po/fi.po
+++ b/po/fi.po
@@ -1,117 +1,107 @@
+# translation of yelp.HEAD.fi.po to Finnish
 # Finnish translation of Yelp
-# Copyright (C) 2001, 2002, 2003 Free Software Foundation, Inc.
+# Copyright (C) 2001, 2002, 2003,2004 Free Software Foundation, Inc.
 # Suomennos: http://gnome-fi.sourceforge.net/
 # Henri Mannerberg <email-not@available.invalid>, 2002-2003.
-# Lauri Nurmi <lanurmi@iki.fi>, 2003.
-# 
+# Lauri Nurmi <lanurmi@iki.fi>, 2003,2004.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-02-24 18:22-0600\n"
-"PO-Revision-Date: 2003-08-12 21:23+0300\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-02 04:29+0100\n"
+"PO-Revision-Date: 2004-03-04 21:48+0200\n"
 "Last-Translator: Lauri Nurmi <lanurmi@iki.fi>\n"
-"Language-Team: Gnome Finnish Translation Team <gnome-fi-laatu@lists."
+"Language-Team: Gnome Finnish Translation Team <virheet@gnome-fi.org>"
 "sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
+"X-Generator: KBabel 1.0\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Sovellukset"
+msgstr "Sovelmat"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Sovellukset"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "Gnome - Työpöytä"
+msgstr "Työpöytä"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Ohjelmakehitys"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Ohjelmakehitys"
+msgstr "Ohjelmistokehitysympäristöt"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Ohjelmakehitys"
+msgstr "Ohjelmistokehitystyökalut"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/_Muokkaa"
+msgstr "Muokkaimet"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Sovellukset"
+msgstr "Opetussovellukset"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Pelit ja viihde"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Yleiset"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "Ohjeen sisältö"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Sovellukset"
+msgstr "Internet-sovellukset"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Kernelrutiinit"
+msgstr "Ytimet"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Sovellukset"
+msgstr "Multimediasovellukset"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Toimistosovellukset"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Sovellukset"
+msgstr "Tieteelliset sovellukset"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Turvallisuus"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Järjestelmäkutsut"
+msgstr "Järjestelmä"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Apuohjelmat"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Sovellukset"
+msgstr "X-sovellukset"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -119,15 +109,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "_Huomioi kirjainkoko"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Etsi"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Etsi: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -139,7 +129,7 @@ msgstr "_Edellinen"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Jatka etsintää alusta"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -151,50 +141,45 @@ msgstr "Yelp-tehdas"
 
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "href-määrettä ei löytynyt kohteesta yelp:document"
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Muisti lopussa"
 
 #: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Nimiösivu"
 
 #: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
-#, fuzzy
 msgid "Contents"
-msgstr "Ohjeen sisältö"
+msgstr "Sisältö"
 
 #: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Tuntematon"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Dokumentti \"%s\" ei ole olemassa"
+msgstr "Valittua dokumenttia ei voitu avata"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Dokumentti \"%s\" ei ole olemassa"
+msgstr "Valittua sivua ei löytyyt tästä dokumentista."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "Dokumentti \"%s\" ei ole olemassa"
+msgstr "Sisällysluetteloa ei voitu lukea."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "DocBook SGML-dokumentit eivät ole enää tuettuja."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Dokumentti \"%s\" ei ole olemassa"
+msgstr "Valittua tiedostoa ei voitu lukea."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -271,22 +256,21 @@ msgid "System Administration"
 msgstr "Järjestelmänvalvonta"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Dokumentit"
+msgstr "Dokumentti-URI"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "Käsiteltävän dokumentin URI"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Taukomäärä on negatiivinen."
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Yelpin aktivointi epäonnistui: \"%s\""
+msgstr "OMF-tiedostoa \"%s\" ei voitu ladata."
 
 #: src/yelp-toc-pager.c:892
 msgid "Categories"
@@ -313,19 +297,16 @@ msgid "/_Edit"
 msgstr "/_Muokkaa"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Muokkaa/_Etsi sivulta..."
+msgstr "/Muokkaa/_Etsi..."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/Muokkaa/Etsi _uudelleen"
+msgstr "/Muokkaa/Etsi _seuraava"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Muokkaa/Etsi _uudelleen"
+msgstr "/Muokkaa/Etsi e_dellinen"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
@@ -344,24 +325,20 @@ msgid "/Go/_Home"
 msgstr "/Siirry/_Koti"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Siirry"
+msgstr "/_Siirry/"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "_Edellinen"
+msgstr "/Siirry"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Siirry/_Hakemisto"
+msgstr "/Siirry/_Seuraava sivu"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Ohjeen sisältö"
+msgstr "/Siirry/S_isältö"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
@@ -423,162 +400,159 @@ msgstr "Gnomen ohje-selain"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "Tietoja tästä artikkelista"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Tietoja tästä lähdeluettelosta"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "Tietoja tästä kirjasta"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "Tietoja tästä luvusta"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "Tietoja tästä merkinnästä"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "Tietoja tästä sanastosta"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "Tietoja tästä hakemistosta"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "Tietoja tästä osasta"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "Tietoja tästä johdannosta"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "Tietoja tästä viitteestä"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "Tietoja tästä osuudesta"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "Tietoja tästä sarjasta"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Sovellukset"
+msgstr "Yhteys"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Liite"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Artikkeli"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Lukijakunta"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Tekijä"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Tekijät"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Lähdeluettelo"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Kirja"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Varoitus"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Luku"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Avustaja"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Avustajat"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Loppukirjoitus"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Tekijänoikeus"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Tekijänoikeudet"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Päiväys"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Sisällys"
+msgstr "Omistuskirjoitus"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/_Muokkaa"
+msgstr "Toimittaja"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Sähköposti"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Esimerkki"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Kuva"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Sanasto"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Tärkeä"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -586,109 +560,107 @@ msgstr "Hakemisto"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Ehtoilmoitus"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Taso"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "Viestin lukijakunta"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "Viestin taso"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "Viestin alkuperä"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Huomautus"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Alkuperä"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Muu myötävaikuttaja"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Muut myötävaikuttaja"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Osa"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Johdanto"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Kustantaja"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Kustantajat"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Viite"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Viitemerkintä"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Viiteosuus"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Julkaisutiedot"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "Muutoshistoria"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "Katso"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "Katso myös"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "Hakemisto"
+msgstr "Aseta hakemisto"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "Taulukko"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Ohjeen sisältö"
+msgstr "Sisällysluettelo"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "Vihje"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "Nimiö"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "Varoitus"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -749,3 +721,4 @@ msgstr "Ohje"
 
 #~ msgid "Search in the index"
 #~ msgstr "Etsi hakemistosta"
+
