- Updated to reflect latest SK categories.
* data/toc.xml.in:
- Updated to reflect latest SK categories.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-07  Shaun McCance  <shaunm@gnome.org>
+
+	* data/toc.xml.in:
+	- Updated to reflect latest SK categories.
+
 2004-03-03  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
