--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-03-09  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	- Version 2.5.90
+
+	* po/*.po:
+	- Various distcheck stuff
+
 2004-03-07  Shaun McCance  <shaunm@gnome.org>
 
 	* data/toc.xml.in:
