Updated Thai translation.
2004-03-09  Paisa Seeluangsawat  <paisa@users.sf.net>

	* th.po: Updated Thai translation.

--- a/po/th.po
+++ b/po/th.po
@@ -1,13 +1,13 @@
 # Thai translation for yelp.
 # Copyright (C) 2003 Free Software Foundation, Inc.
 # This file is distributed under the same license as the yelp package.
-# Paisa Seeluangsawat <paisa@colorado.edu>, 2003.
+# Paisa Seeluangsawat <paisa@users.sf.net>, 2003, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "POT-Creation-Date: 2004-02-24 18:22-0600\n"
-"PO-Revision-Date: 2004-03-09 20:04-0600\n"
+"PO-Revision-Date: 2004-03-09 20:07-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
