--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-09  Paisa Seeluangsawat  <paisa@users.sf.net>
+
+	* th.po: Updated Thai translation.
+
 2004-03-08  Dinesh Nadarajah <dinesh_list@sbcglobal.net>
 
         * ta.po: Updated Tamil Translation.
