Updated Thai translation.
2004-03-09  Paisa Seeluangsawat  <paisa@users.sf.net>

        * th.po: Updated Thai translation.

--- a/po/th.po
+++ b/po/th.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "POT-Creation-Date: 2004-02-24 18:22-0600\n"
-"PO-Revision-Date: 2004-03-09 20:07-0600\n"
+"PO-Revision-Date: 2004-03-10 00:18-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -166,7 +166,7 @@ msgstr "เปิดเอกสารที่เลือกไม่สำเ
 
 #: src/yelp-error.c:52
 msgid "The selected page could not be found in this document."
-msgstr "หาหน้าที่เลือกไม่เจอในเอกสารนี้"
+msgstr "ไม่พบหน้าที่เลือกในเอกสารนี้"
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
