Updated Ukrainian translation

--- a/po/uk.po
+++ b/po/uk.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-10 15:25+0200\n"
+"POT-Creation-Date: 2004-03-12 09:32+0200\n"
 "PO-Revision-Date: 2003-04-08 07:25--500\n"
 "Last-Translator: Yuriy Syrota <yuri@renome.rovno.ua>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
@@ -391,19 +391,19 @@ msgstr "Перегляд довідки для GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr "&#8216;"
+msgstr "‘"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr "&#8217;"
+msgstr "’"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr "&#8220;"
+msgstr "„"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr "&#8221;"
+msgstr "“"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
