--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.0\n"
-"POT-Creation-Date: 2004-03-09 03:31-0600\n"
-"PO-Revision-Date: 2004-01-20 13:45-0500\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-12 14:51-0500\n"
+"PO-Revision-Date: 2004-03-10 15:32-0300\n"
 "Last-Translator: Estêvão Samuel Procópio <tevaum@ig.com.br>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -385,7 +385,7 @@ msgstr "Carregando..."
 msgid "translator_credits"
 msgstr ""
 "Evandro Fernandes Giovanini <evandrofg@ig.com.br>\n"
-"Estêvão Samuel Procópio <tevaum@ig.com.br>"
+"Estêvão Samuel Procópio <tevaum@ig.com.r>"
 
 #: src/yelp-window.c:1306
 msgid "A Help Browser for GNOME"
@@ -408,9 +408,8 @@ msgid "&#8221;"
 msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
-#, fuzzy
 msgid "About This Article"
-msgstr "Sobre Esta Parte"
+msgstr "Sobre Este Artigo"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
@@ -618,7 +617,7 @@ msgstr "Seção de Referência"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Informações de Lançamento"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
