--- a/po/be.po
+++ b/po/be.po
@@ -1,21 +1,19 @@
-# Беларускі пераклад be.
 # Беларускі пераклад yelp.HEAD.
-# translation of yelp.HEAD.be.po to Belarusian
 # Copyright (C) 2002,2003, 2004 Free Software Foundation, Inc.
 # Ales Nyakhaychyk <nab@mail.by>, 2003, 2004.
 # Vital Khilko <dojlid@mova.org>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: be\n"
-"POT-Creation-Date: 2004-03-09 03:31-0600\n"
-"PO-Revision-Date: 2004-02-17 01:06+0200\n"
+"Project-Id-Version: yelp.HEAD\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-13 05:29+0100\n"
+"PO-Revision-Date: 2004-03-13 14:38+0200\n"
 "Last-Translator: Ales Nyakhaychyk <nab@mail.by>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 "X-Generator: KBabel 1.0.2\n"
 
 #: data/toc.xml.in.h:1
@@ -425,7 +423,7 @@ msgstr "Пра гэтую кнігу"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr "Пра гэтую главу"
+msgstr "Пра гэтую падзел"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
@@ -497,7 +495,7 @@ msgstr "Перасьцярога"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr "Частка"
+msgstr "Падзел"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
@@ -621,7 +619,7 @@ msgstr "Частка даведніка"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Зьвесткі выпуска"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
@@ -720,3 +718,4 @@ msgstr "Даведка"
 
 #~ msgid "Loading..&nbsp;"
 #~ msgstr "Загрузка..&nbsp;"
+
