--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-15  Nikos Charonitakis  <frolix68@yahoo.gr>
+
+	* el.po: Updated Greek translation.
+
 2004-03-14  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Fixed quotation marks in Danish translation - thanks to
