--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-15  Maxim Dziumanenko <mvd@mylinux.com.ua>
+
+	* uk.po: Fix some typos and accelerators
+
 2004-03-15  Nikos Charonitakis  <frolix68@yahoo.gr>
 
 	* el.po: Updated Greek translation.
